# agent-service-ref

./: .gitignore  PLAN.md  conftest.py  project_context.md  pyproject.toml
docs/architecture/: 2026-03-10_orientation_route_vlan_l2l.md
service_ref/: ARCHITECTURE.md  README.md  __main__.py  build_service_referential.py  cli.py  config.py  verify_migration.py
service_ref/lib/: db.py  grouping.py  normalize.py  parsers.py  scoring.py
service_ref/output/: service_referential_report.md
service_ref/output_modular/: review_prompt_packs.json  review_suggestions.json  service_referential_report.md
service_ref/review/: assistant.py  batching.py  prompts.py
service_ref/steps/: step_01_load.py  step_02_normalize.py  step_03_match.py  step_04_consolidate.py  step_05_publish.py
service_ref/tests/: test_grouping.py  test_iru_reconciliation.py  test_lea_signal_classification.py  test_normalize.py  test_optical_gdb.py  test_parsers.py  test_regression.py  test_scoring.py  test_spatial.py
src/: __main__.py  agent.py  batch.py  benchmark.py  cli.py  sdk_compat.py
src/prompts/: system_prompt.py
src/tools/: config_tools.py  db_tools.py  resolution_tools.py  scoring_tools.py  text_utils.py  validation_lib.py
tests/: conftest.py  test_batch.py  test_benchmark.py  test_cli.py  test_config_tools.py  test_db_tools.py  test_facturable_publication.py  test_model_config.py  test_optimized_tools.py  test_resolution_guards.py  test_scoring_tools.py  test_sql_guard.py  test_validation_lib.py
